# condabadges

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: download.yml
cache/: urls.yaml
lib/condabadges/: __init__.py
