[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[project]
authors = [
    {name = "Ian Thomas"},
    {email = "ianthomas23@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
]
description = "Generate badges for monthly conda downloads for contourpy repositories"
license = {text = "BSD-3-Clause"}
name = "condabadges"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0"

[project.urls]
repository = "https://github.com/contourpy/condabadges"

[tool.setuptools.packages.find]
where = ["lib"]
